src/test/resources/invalid/unreachableCode/afterCompleteIf.vas
// https://rosettacode.org/wiki/Four_bit_adder#Kotlin

class Main is
    method foo() : Integer is
        var a : Integer = 0
        var b : Integer = 0
        var c : Integer = 1
        if true then
            return a
        else
            return c
        end
        c = 2
    end
end
